gcc/testsuite/rust/rustc/ui/span/E0536.rs
#[cfg(not())] // { dg-error ".E0536." "" { target *-*-* } }
pub fn something() {}

pub fn main() {}

